--- a/styles/variables.css
+++ b/styles/variables.css
@@ -6,7 +6,7 @@
     /* ------------- font settings -------------- */
    
     --main-font-family: 'Inter-Variable', sans-serif;
-    --accent-font-family: 'PressStart2P-Regular', sans-serif;
+    --accent-font-family: 'PressStart2P', fantasy;
 
     --normal-font-weight: 400;
     --bold-font-weight: 700;
