--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,41 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+
+@keyframes pointer {
+  from {
+    inset-inline-start: -15px;
+  }
+
+  to {
+    inset-inline-start: -11px;
+  }
+}
+
+@keyframes blob {
+  from {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.5);
+  }
+
+  to {
+    transform: scale(1);
+  }
+}
+
+@keyframes sparks {
+  from {
+    opacity: 0%;
+  }
+
+  50% {
+    opacity: 100%;
+  }
+
+  to {
+    opacity: 0%;
+  }
+}
