--- a/styles/style.css
+++ b/styles/style.css
@@ -23,6 +23,7 @@
 @supports (font-variation-settings: normal) {
   .page {
     font-family: var(--main-font-family);
+    font-variation-settings: "wght" var(--normal-font-weight);
   }
 }
 
